--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -26,3 +26,8 @@ jobs:
         with:
           repo-token: ${{secrets.GITHUB_TOKEN}}
           joke: ${{steps.jokes.outputs.joke-output}}
+      
+      - name: TypeScript Action
+        uses: ./.github/actions/typescript-action
+        with:
+          milliseconds: 1000
